fix: changed to full width on mobile viewport for value boxes

--- a/assets/styles/components/_Block.scss
+++ b/assets/styles/components/_Block.scss
@@ -216,7 +216,7 @@
 
 			@media (max-width: ($breakpoint-tablet - 1px)) {
 				order: 2 !important;
-				width: 50% !important;
+				width: 100% !important;
 				margin-top: 75px !important;
 			}
 
